--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.onelogin</groupId>
   <artifactId>onelogin-java-sdk</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -28,7 +28,7 @@
     <connection>scm:git:git@github.com:onelogin/onelogin-java-sdk.git</connection>
       <developerConnection>scm:git:git@github.com:onelogin/onelogin-java-sdk.git</developerConnection>
       <url>https://github.com/onelogin/onelogin-java-sdk</url>
-      <tag>HEAD</tag>
+      <tag>1.1.0</tag>
   </scm>
 
   <licenses>
