--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.onelogin</groupId>
   <artifactId>onelogin-java-sdk</artifactId>
-  <version>2.0.2</version>
+  <version>3.0.0-alpha.1</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
