--- a/pom.xml
+++ b/pom.xml
@@ -48,63 +48,102 @@
   </developers>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <servletApiVersion>4.0.1</servletApiVersion>
-    <junitVersion>4.13.2</junitVersion>
-    <slf4jVersion>1.7.32</slf4jVersion>
-    <logbackVersion>1.2.6</logbackVersion>
-    <jodaVersion>2.10.6</jodaVersion>
-    <jsonVersion>20160810</jsonVersion>
-    <httpClientVersion>4.5.13</httpClientVersion>
+      <java.version>1.8</java.version>
+      <maven.compiler.source>${java.version}</maven.compiler.source>
+      <maven.compiler.target>${java.version}</maven.compiler.target>
+      <gson-fire-version>1.8.5</gson-fire-version>
+      <swagger-core-version>1.6.5</swagger-core-version>
+      <okhttp-version>4.9.3</okhttp-version>
+      <gson-version>2.9.0</gson-version>
+      <commons-lang3-version>3.12.0</commons-lang3-version>
+      <jackson-databind-nullable-version>0.2.3</jackson-databind-nullable-version>
+      <jakarta-annotation-version>1.3.5</jakarta-annotation-version>
+      <junit-version>5.8.2</junit-version>
+      <junit-platform-runner.version>1.6.2</junit-platform-runner.version>
+      <mockito-core-version>3.12.4</mockito-core-version>
+      <javax.ws.rs-api-version>2.1.1</javax.ws.rs-api-version>
+      <jsr311-api-version>1.1.1</jsr311-api-version>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <spotless.version>2.21.0</spotless.version>
   </properties>
 
   <dependencies>
-    <!-- for test -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junitVersion}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- for log -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4jVersion}</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logbackVersion}</version>
-      <optional>true</optional>
-    </dependency>
-    <!-- date and time library for Java -->
-    <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
-      <version>${jodaVersion}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>${jsonVersion}</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.apache.commons</groupId>
-    	<artifactId>commons-lang3</artifactId>
-    	<version>3.12.0</version>
-    </dependency>
-    <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-	  <version>${servletApiVersion}</version>
-	  <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>${httpClientVersion}</version>
-    </dependency>
+      <dependency>
+          <groupId>io.swagger</groupId>
+          <artifactId>swagger-annotations</artifactId>
+          <version>${swagger-core-version}</version>
+      </dependency>
+      <!-- @Nullable annotation -->
+      <dependency>
+          <groupId>com.google.code.findbugs</groupId>
+          <artifactId>jsr305</artifactId>
+          <version>3.0.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.squareup.okhttp3</groupId>
+          <artifactId>okhttp</artifactId>
+          <version>${okhttp-version}</version>
+      </dependency>
+      <dependency>
+          <groupId>com.squareup.okhttp3</groupId>
+          <artifactId>logging-interceptor</artifactId>
+          <version>${okhttp-version}</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>${gson-version}</version>
+      </dependency>
+      <dependency>
+          <groupId>io.gsonfire</groupId>
+          <artifactId>gson-fire</artifactId>
+          <version>${gson-fire-version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>${commons-lang3-version}</version>
+      </dependency>
+      <dependency>
+          <groupId>jakarta.annotation</groupId>
+          <artifactId>jakarta.annotation-api</artifactId>
+          <version>${jakarta-annotation-version}</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.openapitools</groupId>
+          <artifactId>jackson-databind-nullable</artifactId>
+          <version>${jackson-databind-nullable-version}</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.ws.rs</groupId>
+          <artifactId>jsr311-api</artifactId>
+          <version>${jsr311-api-version}</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.ws.rs</groupId>
+          <artifactId>javax.ws.rs-api</artifactId>
+          <version>${javax.ws.rs-api-version}</version>
+      </dependency>
+      <!-- test dependencies -->
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-engine</artifactId>
+          <version>${junit-version}</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.junit.platform</groupId>
+          <artifactId>junit-platform-runner</artifactId>
+          <version>${junit-platform-runner.version}</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+          <version>${mockito-core-version}</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
@@ -119,8 +158,8 @@
         </configuration>
       </plugin>
     </plugins>
-  </build> 
-  
+  </build>
+
   <profiles>
     <profile>
       <id>release</id>
